--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --detectOpenHandles --testTimeout 4000",
     "dev": "nodemon src/index.js",
-    "lint": "git add . && lint-staged && git add . && git commit -m  \"$npm_config_message\"",
+    "lint": "git add . && lint-staged && git add .",
     "start": "node index.js"
   },
   "keywords": [
