--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --detectOpenHandles --testTimeout 4000",
     "dev": "nodemon src/index.js",
     "lint": "git add . && lint-staged && git add .",
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "keywords": [
     "talentql",
