--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,9 @@
-JWT_SECRET
 PORT
-NODE_ENV
-MONGO_URL
-SENDGRID_API_KEY
-MAIL_SENDER
-PUSHER_INSTANCE_ID
-PUSHER_SECERT_KEY
+DB_URL
+JWT_SECRET
+TOKEN_EXPIRY
 CLOUDINARY_CLOUD_NAME
-CLOUDINARY_API_KEY
 CLOUDINARY_API_SECRET
-ADMIN_MAIL
-TWILIO_AUTH_TOKEN
-TWILIO_SENDER_NUMBER
-TWILIO_ACCOUNT_SID
-FLW_HASH
-HELLOSIGN_KEY
+MAIL_SENDER
+SENDER_NAME
+SENDGRID_API_KEY
