--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "jest --detectOpenHandles --testTimeout 4000",
     "dev": "nodemon src/index.js",
-    "lint": "git add . && lint-staged && git add .",
+    "lint": "git add . && lint-staged && git add . && git commit -m  \"$npm_config_message\"",
     "start": "node src/index.js"
   },
   "keywords": [
     "talentql",
     "coderbyte",
-    "facebook"
+    "facebook",
+    "restapi"
   ],
   "author": "Oluwaseyi Ogunjuyigbe",
   "license": "ISC",
