--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "facebookrestapi",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "jest --detectOpenHandles --testTimeout 4000",
-    "dev": "nodemon src/index.js",
+    "test": "NODE_ENV=test jest --watchAll",
+    "dev": "nodemon src/server.js",
     "lint": "git add . && lint-staged && git add . && git commit -m  \"$npm_config_message\"",
-    "start": "node src/index.js"
+    "start": "node src/server.js"
   },
   "keywords": [
     "talentql",
@@ -15,6 +15,9 @@
     "facebook",
     "restapi"
   ],
+  "jest": {
+    "testEnvironment": "node"
+  },
   "author": "Oluwaseyi Ogunjuyigbe",
   "license": "ISC",
   "dependencies": {
@@ -37,15 +40,18 @@
     "pluralize": "^8.0.0"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.4",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.8",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3"
   },
   "husky": {
     "hooks": {
