--- a/globalConfig.json
+++ b/globalConfig.json
@@ -1,1 +1,1 @@
-{"mongoUri":"mongodb://127.0.0.1:50559/jest?","mongoDBName":"jest"}
+{"mongoUri":"mongodb://127.0.0.1:51336/facebookapi?","mongoDBName":"facebookapi"}
