--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --watchAll",
+    "test": "cross-env NODE_ENV=test jest --watchAll --testTimeout 30000",
     "dev": "nodemon src/server.js",
     "lint": "git add . && lint-staged && git add . && git commit -m  \"$npm_config_message\"",
     "start": "node src/server.js"
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.25.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
