--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest --watchAll --testTimeout 30000",
+    "test": "cross-env NODE_ENV=test mocha --recursive -w --check-leaks ---timeout 20000 ./src/tests",
     "dev": "nodemon src/server.js",
     "lint": "git add . && lint-staged && git add . && git commit -m  \"$npm_config_message\"",
     "start": "node src/server.js"
@@ -15,13 +15,15 @@
     "facebook",
     "restapi"
   ],
-  "jest": {
-    "testEnvironment": "node"
-  },
   "author": "Oluwaseyi Ogunjuyigbe",
+  "bugs": {
+    "url": "https://github.com/seyiogunjuyigbe/facebookrestapidemo/issues"
+  },
+  "homepage": "https://github.com/seyiogunjuyigbe/facebookrestapidemo#readme",
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.4.4",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.25.1",
     "cors": "^2.8.5",
@@ -42,6 +44,8 @@
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.4",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
@@ -50,7 +54,10 @@
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
+    "mocha": "^8.4.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^2.0.7",
+    "nyc": "^15.1.0",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3"
   },
