--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test mocha --recursive -w --check-leaks ---timeout 20000 ./src/tests/auth.test",
+    "test": "cross-env NODE_ENV=test mocha --recursive -w --check-leaks ---timeout 20000 ./src/tests",
     "dev": "nodemon src/server.js",
     "lint": "git add . && lint-staged && git add . && git commit -m  \"$npm_config_message\"",
     "start": "node src/server.js"
